deploy: 097d89a07ae44c5035ffda455bbc36d622cfaeb7

--- a/genindex.html
+++ b/genindex.html
@@ -63,8 +63,393 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
+ | <a href="#I"><strong>I</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
+ | <a href="#V"><strong>V</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.img.html#ISPy.img.align.align">align() (in module ISPy.img.align)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.rebin.avg1D">avg1D() (in module ISPy.util.rebin)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.rebin.avg2D">avg2D() (in module ISPy.util.rebin)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.bio">bio (class in ISPy.io.pyio)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.azimuth.BQBU2BTAZI">BQBU2BTAZI() (in module ISPy.util.azimuth)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.azimuth.BQBU2BTAZI_cube">BQBU2BTAZI_cube() (in module ISPy.util.azimuth)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.azimuth.BTAZI2BQBU">BTAZI2BQBU() (in module ISPy.util.azimuth)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.azimuth.BTAZI2BQBU_cube">BTAZI2BQBU_cube() (in module ISPy.util.azimuth)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.img.html#ISPy.img.interpolate2d.check_inputs">check_inputs() (in module ISPy.img.interpolate2d)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.container">container (class in ISPy.io.pyio)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.create_empty_variable">create_empty_variable() (ISPy.io.pyio.bio method)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.create_header">create_header() (in module ISPy.io.pyio)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.find.cube">cube() (in module ISPy.util.find)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.inv.html#ISPy.inv.disambiguation.field_test">field_test() (in module ISPy.inv.disambiguation)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.file_exists">file_exists() (in module ISPy.io.pyio)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.find.files">files() (in module ISPy.util.find)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.gentools.findclose">findclose() (in module ISPy.util.gentools)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.gentools.findindex">findindex() (in module ISPy.util.gentools)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.find.fits">fits() (in module ISPy.util.find)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.lapalma.get">get() (in module ISPy.io.lapalma)</a>
+</li>
+      <li><a href="ISPy.inv.html#ISPy.inv.disambiguation.get_acute_angle">get_acute_angle() (in module ISPy.inv.disambiguation)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.get_data_tree">get_data_tree() (ISPy.io.pyio.bio method)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.get_header_size">get_header_size() (in module ISPy.io.pyio)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.lapalma.head">head() (in module ISPy.io.lapalma)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.find.idlsave">idlsave() (in module ISPy.util.find)</a>
+</li>
+      <li><a href="ISPy.img.html#ISPy.img.interpolate2d.interpolate2d">interpolate2d() (in module ISPy.img.interpolate2d)</a>
+</li>
+      <li>
+    ISPy
+
+      <ul>
+        <li><a href="ISPy.html#module-ISPy">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.data
+
+      <ul>
+        <li><a href="ISPy.data.html#module-ISPy.data">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.img
+
+      <ul>
+        <li><a href="ISPy.img.html#module-ISPy.img">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.img.align
+
+      <ul>
+        <li><a href="ISPy.img.html#module-ISPy.img.align">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.img.interpolate2d
+
+      <ul>
+        <li><a href="ISPy.img.html#module-ISPy.img.interpolate2d">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.inv
+
+      <ul>
+        <li><a href="ISPy.inv.html#module-ISPy.inv">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.inv.disambiguation
+
+      <ul>
+        <li><a href="ISPy.inv.html#module-ISPy.inv.disambiguation">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.io
+
+      <ul>
+        <li><a href="ISPy.io.html#module-ISPy.io">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.io.lapalma
+
+      <ul>
+        <li><a href="ISPy.io.html#module-ISPy.io.lapalma">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    ISPy.io.pyio
+
+      <ul>
+        <li><a href="ISPy.io.html#module-ISPy.io.pyio">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.rt
+
+      <ul>
+        <li><a href="ISPy.rt.html#module-ISPy.rt">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.sim
+
+      <ul>
+        <li><a href="ISPy.sim.html#module-ISPy.sim">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.util
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.util.azimuth
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util.azimuth">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.util.find
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util.find">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.util.gentools
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util.gentools">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.util.rebin
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util.rebin">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.vis
+
+      <ul>
+        <li><a href="ISPy.vis.html#module-ISPy.vis">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.map_variable">map_variable() (ISPy.io.pyio.bio method)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.lapalma.mk_header">mk_header() (in module ISPy.io.lapalma)</a>
+</li>
+      <li>
+    module
+
+      <ul>
+        <li><a href="ISPy.html#module-ISPy">ISPy</a>
+</li>
+        <li><a href="ISPy.data.html#module-ISPy.data">ISPy.data</a>
+</li>
+        <li><a href="ISPy.img.html#module-ISPy.img">ISPy.img</a>
+</li>
+        <li><a href="ISPy.img.html#module-ISPy.img.align">ISPy.img.align</a>
+</li>
+        <li><a href="ISPy.img.html#module-ISPy.img.interpolate2d">ISPy.img.interpolate2d</a>
+</li>
+        <li><a href="ISPy.inv.html#module-ISPy.inv">ISPy.inv</a>
+</li>
+        <li><a href="ISPy.inv.html#module-ISPy.inv.disambiguation">ISPy.inv.disambiguation</a>
+</li>
+        <li><a href="ISPy.io.html#module-ISPy.io">ISPy.io</a>
+</li>
+        <li><a href="ISPy.io.html#module-ISPy.io.lapalma">ISPy.io.lapalma</a>
+</li>
+        <li><a href="ISPy.io.html#module-ISPy.io.pyio">ISPy.io.pyio</a>
+</li>
+        <li><a href="ISPy.rt.html#module-ISPy.rt">ISPy.rt</a>
+</li>
+        <li><a href="ISPy.sim.html#module-ISPy.sim">ISPy.sim</a>
+</li>
+        <li><a href="ISPy.util.html#module-ISPy.util">ISPy.util</a>
+</li>
+        <li><a href="ISPy.util.html#module-ISPy.util.azimuth">ISPy.util.azimuth</a>
+</li>
+        <li><a href="ISPy.util.html#module-ISPy.util.find">ISPy.util.find</a>
+</li>
+        <li><a href="ISPy.util.html#module-ISPy.util.gentools">ISPy.util.gentools</a>
+</li>
+        <li><a href="ISPy.util.html#module-ISPy.util.rebin">ISPy.util.rebin</a>
+</li>
+        <li><a href="ISPy.vis.html#module-ISPy.vis">ISPy.vis</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.find.nc">nc() (in module ISPy.util.find)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.number2dtype">number2dtype() (in module ISPy.io.pyio)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.number2size">number2size() (in module ISPy.io.pyio)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.inv.html#ISPy.inv.disambiguation.potential_extrapolation">potential_extrapolation() (in module ISPy.inv.disambiguation)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.lapalma.put">put() (in module ISPy.io.lapalma)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.lapalma.read">read() (in module ISPy.io.lapalma)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.read_variable">read_variable() (ISPy.io.pyio.bio method)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.gentools.rotate_cube">rotate_cube() (in module ISPy.util.gentools)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.inv.html#ISPy.inv.disambiguation.smooth_azimuth">smooth_azimuth() (in module ISPy.inv.disambiguation)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.type2number">type2number() (in module ISPy.io.pyio)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.unpack_header">unpack_header() (in module ISPy.io.pyio)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.variable_exists">variable_exists() (ISPy.io.pyio.bio method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.lapalma.write">write() (in module ISPy.io.lapalma)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.write_variable">write_variable() (ISPy.io.pyio.bio method)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.lapalma.writeto">writeto() (in module ISPy.io.lapalma)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
            </div>
