--- a/genindex.html
+++ b/genindex.html
@@ -66,10 +66,13 @@
  <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
+ | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
@@ -84,10 +87,16 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.plottools.add_colorbar">add_colorbar() (in module ISPy.util.plottools)</a>
+</li>
       <li><a href="ISPy.img.html#ISPy.img.align.align">align() (in module ISPy.img.align)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.cubeshow.animate_cube">animate_cube() (in module ISPy.util.cubeshow)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.atlas.atlas">atlas (class in ISPy.spec.atlas)</a>
+</li>
       <li><a href="ISPy.util.html#ISPy.util.rebin.avg1D">avg1D() (in module ISPy.util.rebin)</a>
 </li>
       <li><a href="ISPy.util.html#ISPy.util.rebin.avg2D">avg2D() (in module ISPy.util.rebin)</a>
@@ -102,13 +111,15 @@
 </li>
       <li><a href="ISPy.util.html#ISPy.util.azimuth.BQBU2BTAZI">BQBU2BTAZI() (in module ISPy.util.azimuth)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.util.html#ISPy.util.azimuth.BQBU2BTAZI_cube">BQBU2BTAZI_cube() (in module ISPy.util.azimuth)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.util.html#ISPy.util.azimuth.BTAZI2BQBU">BTAZI2BQBU() (in module ISPy.util.azimuth)</a>
 </li>
       <li><a href="ISPy.util.html#ISPy.util.azimuth.BTAZI2BQBU_cube">BTAZI2BQBU_cube() (in module ISPy.util.azimuth)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.remap.bvec2cea">bvec2cea() (in module ISPy.util.remap)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -116,9 +127,17 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.bfield.cartesian2cylindrical">cartesian2cylindrical() (in module ISPy.spec.bfield)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.bfield.cartesian2spherical">cartesian2spherical() (in module ISPy.spec.bfield)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.wfa.cder">cder() (in module ISPy.spec.wfa)</a>
+</li>
       <li><a href="ISPy.img.html#ISPy.img.interpolate2d.check_inputs">check_inputs() (in module ISPy.img.interpolate2d)</a>
 </li>
       <li><a href="ISPy.io.html#ISPy.io.pyio.container">container (class in ISPy.io.pyio)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.calib.convolve_atlas">convolve_atlas() (in module ISPy.spec.calib)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -126,7 +145,41 @@
 </li>
       <li><a href="ISPy.io.html#ISPy.io.pyio.create_header">create_header() (in module ISPy.io.pyio)</a>
 </li>
+      <li><a href="ISPy.spec.html#ISPy.spec.crisp.crisp">crisp (class in ISPy.spec.crisp)</a>
+</li>
       <li><a href="ISPy.util.html#ISPy.util.find.cube">cube() (in module ISPy.util.find)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.bfield.cylindrical2cartesian">cylindrical2cartesian() (in module ISPy.spec.bfield)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.bfield.cylindrical2spherical">cylindrical2spherical() (in module ISPy.spec.bfield)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.crisp.double2time">double2time() (in module ISPy.spec.crisp)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.chromis.dual_fpi">dual_fpi() (in module ISPy.spec.chromis)</a>
+
+      <ul>
+        <li><a href="ISPy.spec.html#ISPy.spec.crisp.crisp.dual_fpi">(ISPy.spec.crisp.crisp method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.crisp.crisp.dual_fpi_ch">dual_fpi_ch() (ISPy.spec.crisp.crisp method)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.crisp.crisp.dual_fpi_conv">dual_fpi_conv() (ISPy.spec.crisp.crisp method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.crosstalk.estimate_crosstalk">estimate_crosstalk() (in module ISPy.spec.crosstalk)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -155,14 +208,40 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.io.html#ISPy.io.lapalma.get">get() (in module ISPy.io.lapalma)</a>
+
+      <ul>
+        <li><a href="ISPy.spec.html#ISPy.spec.atlas.atlas.get">(ISPy.spec.atlas.atlas method)</a>
 </li>
+      </ul></li>
       <li><a href="ISPy.inv.html#ISPy.inv.disambiguation.get_acute_angle">get_acute_angle() (in module ISPy.inv.disambiguation)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.calib.get_calibration">get_calibration() (in module ISPy.spec.calib)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.solarnet.get_coord">get_coord() (in module ISPy.io.solarnet)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.get_data_tree">get_data_tree() (ISPy.io.pyio.bio method)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.solarnet.get_extent">get_extent() (in module ISPy.io.solarnet)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.get_header_size">get_header_size() (in module ISPy.io.pyio)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.get_data_tree">get_data_tree() (ISPy.io.pyio.bio method)</a>
+      <li><a href="ISPy.spec.html#ISPy.spec.crosstalk.get_projection">get_projection() (in module ISPy.spec.crosstalk)</a>
 </li>
-      <li><a href="ISPy.io.html#ISPy.io.pyio.get_header_size">get_header_size() (in module ISPy.io.pyio)</a>
+      <li><a href="ISPy.io.html#ISPy.io.solarnet.get_time">get_time() (in module ISPy.io.solarnet)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.solarnet.get_wav">get_wav() (in module ISPy.io.solarnet)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.wfa.getBhor">getBhor() (in module ISPy.spec.wfa)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.wfa.getBlos">getBlos() (in module ISPy.spec.wfa)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.wfa.getBlosMask">getBlosMask() (in module ISPy.spec.wfa)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.wfa.getBlosProf">getBlosProf() (in module ISPy.spec.wfa)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.crisp.crisp.getwidth">getwidth() (ISPy.spec.crisp.crisp method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -245,13 +324,25 @@
         <li><a href="ISPy.io.html#module-ISPy.io.lapalma">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ISPy.io.pyio
 
       <ul>
         <li><a href="ISPy.io.html#module-ISPy.io.pyio">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.io.sn
+
+      <ul>
+        <li><a href="ISPy.io.html#module-ISPy.io.sn">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.io.solarnet
+
+      <ul>
+        <li><a href="ISPy.io.html#module-ISPy.io.solarnet">module</a>
 </li>
       </ul></li>
       <li>
@@ -269,6 +360,64 @@
 </li>
       </ul></li>
       <li>
+    ISPy.spec
+
+      <ul>
+        <li><a href="ISPy.spec.html#module-ISPy.spec">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.spec.atlas
+
+      <ul>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.atlas">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    ISPy.spec.bfield
+
+      <ul>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.bfield">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.spec.calib
+
+      <ul>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.calib">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.spec.chromis
+
+      <ul>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.chromis">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.spec.crisp
+
+      <ul>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.crisp">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.spec.crosstalk
+
+      <ul>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.crosstalk">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.spec.wfa
+
+      <ul>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.wfa">module</a>
+</li>
+      </ul></li>
+      <li>
     ISPy.util
 
       <ul>
@@ -280,6 +429,13 @@
 
       <ul>
         <li><a href="ISPy.util.html#module-ISPy.util.azimuth">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.util.cubeshow
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util.cubeshow">module</a>
 </li>
       </ul></li>
       <li>
@@ -297,10 +453,31 @@
 </li>
       </ul></li>
       <li>
+    ISPy.util.obs
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util.obs">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.util.plottools
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util.plottools">module</a>
+</li>
+      </ul></li>
+      <li>
     ISPy.util.rebin
 
       <ul>
         <li><a href="ISPy.util.html#module-ISPy.util.rebin">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.util.remap
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util.remap">module</a>
 </li>
       </ul></li>
       <li>
@@ -313,10 +490,26 @@
   </ul></td>
 </tr></table>
 
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.calib.limbdarkening">limbdarkening() (in module ISPy.spec.calib)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.wfa.line">line (class in ISPy.spec.wfa)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.plottools.make_colormap">make_colormap() (in module ISPy.util.plottools)</a>
+</li>
       <li><a href="ISPy.io.html#ISPy.io.pyio.bio.map_variable">map_variable() (ISPy.io.pyio.bio method)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.plottools.MidpointNormalize">MidpointNormalize (class in ISPy.util.plottools)</a>
 </li>
       <li><a href="ISPy.io.html#ISPy.io.lapalma.mk_header">mk_header() (in module ISPy.io.lapalma)</a>
 </li>
@@ -344,19 +537,47 @@
 </li>
         <li><a href="ISPy.io.html#module-ISPy.io.pyio">ISPy.io.pyio</a>
 </li>
+        <li><a href="ISPy.io.html#module-ISPy.io.sn">ISPy.io.sn</a>
+</li>
+        <li><a href="ISPy.io.html#module-ISPy.io.solarnet">ISPy.io.solarnet</a>
+</li>
         <li><a href="ISPy.rt.html#module-ISPy.rt">ISPy.rt</a>
 </li>
         <li><a href="ISPy.sim.html#module-ISPy.sim">ISPy.sim</a>
+</li>
+        <li><a href="ISPy.spec.html#module-ISPy.spec">ISPy.spec</a>
+</li>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.atlas">ISPy.spec.atlas</a>
+</li>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.bfield">ISPy.spec.bfield</a>
+</li>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.calib">ISPy.spec.calib</a>
+</li>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.chromis">ISPy.spec.chromis</a>
+</li>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.crisp">ISPy.spec.crisp</a>
+</li>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.crosstalk">ISPy.spec.crosstalk</a>
+</li>
+        <li><a href="ISPy.spec.html#module-ISPy.spec.wfa">ISPy.spec.wfa</a>
 </li>
         <li><a href="ISPy.util.html#module-ISPy.util">ISPy.util</a>
 </li>
         <li><a href="ISPy.util.html#module-ISPy.util.azimuth">ISPy.util.azimuth</a>
 </li>
+        <li><a href="ISPy.util.html#module-ISPy.util.cubeshow">ISPy.util.cubeshow</a>
+</li>
         <li><a href="ISPy.util.html#module-ISPy.util.find">ISPy.util.find</a>
 </li>
         <li><a href="ISPy.util.html#module-ISPy.util.gentools">ISPy.util.gentools</a>
 </li>
+        <li><a href="ISPy.util.html#module-ISPy.util.obs">ISPy.util.obs</a>
+</li>
+        <li><a href="ISPy.util.html#module-ISPy.util.plottools">ISPy.util.plottools</a>
+</li>
         <li><a href="ISPy.util.html#module-ISPy.util.rebin">ISPy.util.rebin</a>
+</li>
+        <li><a href="ISPy.util.html#module-ISPy.util.remap">ISPy.util.remap</a>
 </li>
         <li><a href="ISPy.vis.html#module-ISPy.vis">ISPy.vis</a>
 </li>
@@ -368,6 +589,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.util.html#ISPy.util.find.nc">nc() (in module ISPy.util.find)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.crisp.crisp.np">np (ISPy.spec.crisp.crisp attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -381,10 +604,12 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="ISPy.inv.html#ISPy.inv.disambiguation.potential_extrapolation">potential_extrapolation() (in module ISPy.inv.disambiguation)</a>
+      <li><a href="ISPy.util.html#ISPy.util.cubeshow.plotall">plotall() (in module ISPy.util.cubeshow)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.inv.html#ISPy.inv.disambiguation.potential_extrapolation">potential_extrapolation() (in module ISPy.inv.disambiguation)</a>
+</li>
       <li><a href="ISPy.io.html#ISPy.io.lapalma.put">put() (in module ISPy.io.lapalma)</a>
 </li>
   </ul></td>
@@ -394,10 +619,18 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.io.html#ISPy.io.lapalma.read">read() (in module ISPy.io.lapalma)</a>
+
+      <ul>
+        <li><a href="ISPy.io.html#ISPy.io.solarnet.read">(in module ISPy.io.solarnet)</a>
+</li>
+      </ul></li>
+      <li><a href="ISPy.spec.html#ISPy.spec.crisp.crisp.read_reflectivity">read_reflectivity() (ISPy.spec.crisp.crisp method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.io.html#ISPy.io.pyio.bio.read_variable">read_variable() (ISPy.io.pyio.bio method)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.remap.remap2cea">remap2cea() (in module ISPy.util.remap)</a>
 </li>
       <li><a href="ISPy.util.html#ISPy.util.gentools.rotate_cube">rotate_cube() (in module ISPy.util.gentools)</a>
 </li>
@@ -407,7 +640,21 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.io.html#ISPy.io.solarnet.seconds2string">seconds2string() (in module ISPy.io.solarnet)</a>
+</li>
       <li><a href="ISPy.inv.html#ISPy.inv.disambiguation.smooth_azimuth">smooth_azimuth() (in module ISPy.inv.disambiguation)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.calib.spectrum">spectrum() (in module ISPy.spec.calib)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.remap.sphere2img">sphere2img() (in module ISPy.util.remap)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.bfield.spherical2cartesian">spherical2cartesian() (in module ISPy.spec.bfield)</a>
+</li>
+      <li><a href="ISPy.spec.html#ISPy.spec.bfield.spherical2cylindrical">spherical2cylindrical() (in module ISPy.spec.bfield)</a>
+</li>
+      <li><a href="ISPy.io.html#ISPy.io.sn.sstdata">sstdata (class in ISPy.io.sn)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -415,6 +662,12 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.crisp.time2double">time2double() (in module ISPy.spec.crisp)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.atlas.atlas.to">to() (ISPy.spec.atlas.atlas method)</a>
+</li>
       <li><a href="ISPy.io.html#ISPy.io.pyio.type2number">type2number() (in module ISPy.io.pyio)</a>
 </li>
   </ul></td>
@@ -426,6 +679,10 @@
       <li><a href="ISPy.io.html#ISPy.io.pyio.unpack_header">unpack_header() (in module ISPy.io.pyio)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.spec.html#ISPy.spec.wfa.line.update">update() (ISPy.spec.wfa.line method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="V">V</h2>
@@ -434,13 +691,23 @@
       <li><a href="ISPy.io.html#ISPy.io.pyio.bio.variable_exists">variable_exists() (ISPy.io.pyio.bio method)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.remap.vector_transformation">vector_transformation() (in module ISPy.util.remap)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.obs.viewangle">viewangle() (in module ISPy.util.obs)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.io.html#ISPy.io.lapalma.write">write() (in module ISPy.io.lapalma)</a>
+
+      <ul>
+        <li><a href="ISPy.io.html#ISPy.io.solarnet.write">(in module ISPy.io.solarnet)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.io.html#ISPy.io.pyio.bio.write_variable">write_variable() (ISPy.io.pyio.bio method)</a>
