deploy: 991933682db828924a8fe633396125b473e68c88

--- a/genindex.html
+++ b/genindex.html
@@ -75,6 +75,7 @@
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
+ | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -82,6 +83,7 @@
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
+ | <a href="#X"><strong>X</strong></a>
  
 </div>
 <h2 id="A">A</h2>
@@ -195,6 +197,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.util.html#ISPy.util.lineplot.find_nearest">find_nearest() (in module ISPy.util.lineplot)</a>
+</li>
       <li><a href="ISPy.util.html#ISPy.util.gentools.findclose">findclose() (in module ISPy.util.gentools)</a>
 </li>
       <li><a href="ISPy.util.html#ISPy.util.gentools.findindex">findindex() (in module ISPy.util.gentools)</a>
@@ -373,8 +377,6 @@
         <li><a href="ISPy.spec.html#module-ISPy.spec.atlas">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ISPy.spec.bfield
 
@@ -382,6 +384,8 @@
         <li><a href="ISPy.spec.html#module-ISPy.spec.bfield">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ISPy.spec.calib
 
@@ -453,6 +457,13 @@
 </li>
       </ul></li>
       <li>
+    ISPy.util.lineplot
+
+      <ul>
+        <li><a href="ISPy.util.html#module-ISPy.util.lineplot">module</a>
+</li>
+      </ul></li>
+      <li>
     ISPy.util.obs
 
       <ul>
@@ -485,6 +496,13 @@
 
       <ul>
         <li><a href="ISPy.vis.html#module-ISPy.vis">module</a>
+</li>
+      </ul></li>
+      <li>
+    ISPy.vis.show_hazel
+
+      <ul>
+        <li><a href="ISPy.vis.html#module-ISPy.vis.show_hazel">module</a>
 </li>
       </ul></li>
   </ul></td>
@@ -571,6 +589,8 @@
 </li>
         <li><a href="ISPy.util.html#module-ISPy.util.gentools">ISPy.util.gentools</a>
 </li>
+        <li><a href="ISPy.util.html#module-ISPy.util.lineplot">ISPy.util.lineplot</a>
+</li>
         <li><a href="ISPy.util.html#module-ISPy.util.obs">ISPy.util.obs</a>
 </li>
         <li><a href="ISPy.util.html#module-ISPy.util.plottools">ISPy.util.plottools</a>
@@ -580,6 +600,8 @@
         <li><a href="ISPy.util.html#module-ISPy.util.remap">ISPy.util.remap</a>
 </li>
         <li><a href="ISPy.vis.html#module-ISPy.vis">ISPy.vis</a>
+</li>
+        <li><a href="ISPy.vis.html#module-ISPy.vis.show_hazel">ISPy.vis.show_hazel</a>
 </li>
       </ul></li>
   </ul></td>
@@ -601,10 +623,20 @@
   </ul></td>
 </tr></table>
 
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.vis.html#ISPy.vis.show_hazel.onclick">onclick() (in module ISPy.vis.show_hazel)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.util.html#ISPy.util.cubeshow.plotall">plotall() (in module ISPy.util.cubeshow)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.lineplot.plotline">plotline() (in module ISPy.util.lineplot)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -646,13 +678,15 @@
 </li>
       <li><a href="ISPy.spec.html#ISPy.spec.calib.spectrum">spectrum() (in module ISPy.spec.calib)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.util.html#ISPy.util.remap.sphere2img">sphere2img() (in module ISPy.util.remap)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ISPy.spec.html#ISPy.spec.bfield.spherical2cartesian">spherical2cartesian() (in module ISPy.spec.bfield)</a>
 </li>
       <li><a href="ISPy.spec.html#ISPy.spec.bfield.spherical2cylindrical">spherical2cylindrical() (in module ISPy.spec.bfield)</a>
+</li>
+      <li><a href="ISPy.util.html#ISPy.util.lineplot.SST_scan_time">SST_scan_time() (in module ISPy.util.lineplot)</a>
 </li>
       <li><a href="ISPy.io.html#ISPy.io.sn.sstdata">sstdata (class in ISPy.io.sn)</a>
 </li>
@@ -713,6 +747,14 @@
       <li><a href="ISPy.io.html#ISPy.io.pyio.bio.write_variable">write_variable() (ISPy.io.pyio.bio method)</a>
 </li>
       <li><a href="ISPy.io.html#ISPy.io.lapalma.writeto">writeto() (in module ISPy.io.lapalma)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="X">X</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ISPy.vis.html#ISPy.vis.show_hazel.xyplot">xyplot() (in module ISPy.vis.show_hazel)</a>
 </li>
   </ul></td>
 </tr></table>
