--- a/genindex.html
+++ b/genindex.html
@@ -499,6 +499,13 @@
 </li>
       </ul></li>
       <li>
+    ISPy.vis.readout_fn
+
+      <ul>
+        <li><a href="ISPy.vis.html#module-ISPy.vis.readout_fn">module</a>
+</li>
+      </ul></li>
+      <li>
     ISPy.vis.show_hazel
 
       <ul>
@@ -601,6 +608,8 @@
 </li>
         <li><a href="ISPy.vis.html#module-ISPy.vis">ISPy.vis</a>
 </li>
+        <li><a href="ISPy.vis.html#module-ISPy.vis.readout_fn">ISPy.vis.readout_fn</a>
+</li>
         <li><a href="ISPy.vis.html#module-ISPy.vis.show_hazel">ISPy.vis.show_hazel</a>
 </li>
       </ul></li>
@@ -658,9 +667,15 @@
       </ul></li>
       <li><a href="ISPy.spec.html#ISPy.spec.crisp.crisp.read_reflectivity">read_reflectivity() (ISPy.spec.crisp.crisp method)</a>
 </li>
+      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.read_variable">read_variable() (ISPy.io.pyio.bio method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="ISPy.io.html#ISPy.io.pyio.bio.read_variable">read_variable() (ISPy.io.pyio.bio method)</a>
+      <li><a href="ISPy.vis.html#ISPy.vis.readout_fn.readout_1c">readout_1c() (in module ISPy.vis.readout_fn)</a>
+</li>
+      <li><a href="ISPy.vis.html#ISPy.vis.readout_fn.readout_1c_ch">readout_1c_ch() (in module ISPy.vis.readout_fn)</a>
+</li>
+      <li><a href="ISPy.vis.html#ISPy.vis.readout_fn.readout_2c">readout_2c() (in module ISPy.vis.readout_fn)</a>
 </li>
       <li><a href="ISPy.util.html#ISPy.util.remap.remap2cea">remap2cea() (in module ISPy.util.remap)</a>
 </li>
