deploy: de3f5deb2a1aa8a022f5a13d749fb6c21d08235f

--- a/ISPy.util.html
+++ b/ISPy.util.html
@@ -136,11 +136,8 @@ for a 2D cube array.</p>
 <li><p><strong>fps</strong> (<em>float, optional</em>) – frames per second. Default = 20</p></li>
 </ul>
 </dd>
-<dt class="field-even">Returns</dt>
-<dd class="field-even"><p></p>
-</dd>
-<dt class="field-odd">Return type</dt>
-<dd class="field-odd"><p>Video file if name is given.</p>
+<dt class="field-even">Return type</dt>
+<dd class="field-even"><p>Video file if name is given.</p>
 </dd>
 </dl>
 <p class="rubric">Example</p>
